force-app/main/default/objects/Beneficiary__c/Beneficiary__c.object-meta.xml
<CustomObject>
    <label>Beneficiary</label>
    <pluralLabel>Beneficiaries</pluralLabel>
    <nameField>
        <label>Beneficiary Number</label>
        <type>AutoNumber</type>
        <displayFormat>BEN-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Synthetic beneficiary designation on a Policy.</description>
</CustomObject>