force-app/main/default/objects/Beneficiary__c/fields/Allocation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percent__c</fullName>
    <label>Allocation %</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Share of the benefit, 0.01 to 100. Stored as a plain number (50 = 50%).</description>
</CustomField>