force-app/main/default/objects/Beneficiary__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Primary</fullName><default>true</default><label>Primary</label></value>
            <value><fullName>Contingent</fullName><default>false</default><label>Contingent</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>