force-app/main/default/objects/Beneficiary__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <type>MasterDetail</type>
    <referenceTo>Policy__c</referenceTo>
    <relationshipName>Beneficiaries</relationshipName>
    <relationshipLabel>Beneficiaries</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
</CustomField>