force-app/main/default/objects/Beneficiary__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Spouse</fullName><default>false</default><label>Spouse</label></value>
            <value><fullName>Child</fullName><default>false</default><label>Child</label></value>
            <value><fullName>Parent</fullName><default>false</default><label>Parent</label></value>
            <value><fullName>Sibling</fullName><default>false</default><label>Sibling</label></value>
            <value><fullName>Trust</fullName><default>false</default><label>Trust</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>